tests/macros/duplicate/should_loop.stderr
error: duplicate option `should_loop`
 --> $DIR/should_loop.rs:4:9
  |
4 |         should_loop: todo!(),
  |         ^^^^^^^^^^^
