tests/macros/duplicate/should_loop.rs
fn main() {
    let q = inquisition::questions![list {
        should_loop: todo!(),
        should_loop: todo!(),
    }];
}
